--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "smart-ledger",
   "version": "0.1.0",
   "private": true,
   "main": "build/main.js",
@@ -65,6 +65,7 @@
       }
     ],
     "win": {
+      "icon": "public/logo.ico",
       "target": [
         "nsis"
       ]
